Fix chest screen handlers, more block codecs